[package]
name = "hanoi-tower-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1", features = ["dynamic_linking"] }
hanoi-tower-solver = { path = "../hanoi-tower-solver" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
